--- a/views/blog.handlebars
+++ b/views/blog.handlebars
@@ -1,14 +1,14 @@
 <div class="text-center">
-  <h2>{{name}}</h2>
-  <p>{{{get_emoji}}}</p>
-  <p>{{description}}</p>
-  <p>Created by {{user.name}} on {{format_date date_created}}</p>
+  <h2>{{blog_name}}</h2>
+  <p>{{blog_content}}</p>
+  <p>Published by {{user.username}} on {{format_date date_created}}</p>
   <p>
-    <span for="img" aria-label="money">💲</span>
-    <span class="dollar-amount">{{format_amount needed_funding}}</span>
-    needed
+    <button class="btn btn-primary">Write a Comment</button>
   </p>
-  <p>
-    <button class="btn btn-primary">Fund this Project!</button>
-  </p>
+  {{#each comments as |comment| }}
+  <div>
+    <p>Comment: {{blog.comment.comment_content}}</p>
+    <p>{{blog.comment.user.username}}</p>
+  </div>
+  {{/each}}
 </div>
