--- a/views/blog.handlebars
+++ b/views/blog.handlebars
@@ -1,7 +1,7 @@
 <div class="text-center">
-  <h2>{{blog_name}}</h2>
-  <p>{{blog_content}}</p>
-  <p>Published by {{user.username}} on {{format_date date_created}}</p>
+  <h2>{{blog.blog_name}}</h2>
+  <p>{{blog.blog_content}}</p>
+  <p>Published by {{blog.user.username}} on {{blog.date_created}}</p>
   <p>
     <button class="btn btn-primary">Write a Comment</button>
   </p>
